--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,12 @@
             <version>5.1.2.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-web</artifactId>
+            <version>17.0.2</version>
+        </dependency>
+
     </dependencies>
 
 
