--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junit.version>5.9.2</junit.version>
-        <javafx.version>17.0.1</javafx.version>
+        <javafx.version>22.0.1</javafx.version> <!-- Update this line -->
     </properties>
 
     <dependencies>
