--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,24 @@
             <version>17.0.2</version>
         </dependency>
         <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.9</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.5.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.mindrot</groupId>
             <artifactId>jbcrypt</artifactId>
             <version>0.4</version>
@@ -108,11 +126,9 @@
             <artifactId>httpcore</artifactId>
             <version>4.4.16</version>
         </dependency>
-        <dependency>
-            <groupId>com.sosorevgm.profanityfilter</groupId>
-            <artifactId>profanityfilter</artifactId>
-            <version>1.0.0</version>
-        </dependency>
+
+
+
 
 
     </dependencies>
