--- a/pom.xml
+++ b/pom.xml
@@ -154,7 +154,11 @@
             <version>4.12.0</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>5.5.13.2</version>
+        </dependency>
 
 
     </dependencies>
