--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,14 @@
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <repositories>
+        <repository>
+            <id>central</id>
+            <url>https://repo.maven.apache.org/maven2</url>
+        </repository>
+    </repositories>
+
+
     <dependencies>
         <dependency>
             <groupId>com.jfoenix</groupId>
@@ -48,6 +56,14 @@
             <artifactId>cloudinary-http44</artifactId>
             <version>1.31.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google.cloud/google-cloud-translate -->
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-translate</artifactId>
+            <version>2.42.0</version>
+        </dependency>
+
+
 
         <dependency>
             <groupId>com.itextpdf</groupId>
