--- a/pom.xml
+++ b/pom.xml
@@ -316,6 +316,17 @@
             <version>3.4.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>jakarta.mail</groupId>
+            <artifactId>jakarta.mail-api</artifactId>
+            <version>2.1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.5.0-b01</version>
+        </dependency>
+
         <!-- iText, if you're using Image.getInstance to handle images -->
         <dependency>
             <groupId>com.itextpdf</groupId>
